fixup: style scrollbars with css-scrollbars proposal

--- a/apps/view/src/styles/skins.css
+++ b/apps/view/src/styles/skins.css
@@ -13,3 +13,16 @@
 .bg-gradient {
   background: radial-gradient(#eee, #999);
 }
+
+.scrollbar-white,
+.scrollbar-near-black {
+  scrollbar-width: thin;
+}
+
+.scrollbar-white {
+  scrollbar-color: #fff transparent;
+}
+
+.scrollbar-near-black {
+  scrollbar-color: #111 transparent;
+}
